
cc_library(
	name = "random",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_io//:io",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_math//:math",
		"@com_github_bazelboost_system//:system"
	],
)
