load("@rules_cc//cc:defs.bzl", "cc_library")

_detail_hdrs = [
    "include/boost/random/detail/*.hpp"
]

cc_library(
    name = "random_internal",
    hdrs = glob(_detail_hdrs),
    deps = [
        "@boost//libs/config",
        "@boost//libs/throw_exception",
        "@boost//libs/type_traits",
        "@boost//libs/io",
        "@boost//libs/multiprecision",
    ],
)

cc_library(
    name = "random",
    visibility = ["//visibility:public"],
    includes = ["include"],
    defines = ["BOOST_ALL_NO_LIB"],
    hdrs = glob(["include/**/*.hpp"], exclude = _detail_hdrs),
    srcs = glob(["src/*.cpp"]),
    deps = [
        ":random_internal",
        "@boost//libs/core",
        "@boost//libs/integer",
        "@boost//libs/system",
        "@boost//libs/range",
        "@boost//libs/dynamic_bitset",
    ],
)
